SCSS样式配置，完成组件示例

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,15 @@
-@import "taro-ui/dist/style/index.scss";
-@import "./custom-theme.scss"; // 自定义主题
-@import './assets/fonts/iconfont';
+@import "./assets/style/theme.scss";
+@import "~taro-ui/dist/style/index.scss";
+
+
+.page {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  min-height: 100vh;
+  background-color: $color-page-bg;
+}
+
+view {
+  box-sizing: border-box;
+}
