feat(page): 增加了管理页、创建学生档案页，接入了创建数据接口，可以裁剪图片并上传

--- a/src/components/fsr-grid/index.scss
+++ b/src/components/fsr-grid/index.scss
@@ -37,6 +37,15 @@
       padding-top: $spacing-h-lg * 2;
       line-height: $line-height-zh * 2;
       text-align: center;
+
+      &-score{
+        color: $color-brand;
+      }
+
+      &-unit{
+        font-size: $font-size-sm;
+        padding-left: $spacing-v-xs;
+      }
     }
   }
 }
