--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,9 @@
 @import "./assets/style/theme.scss";
 @import "~taro-ui/dist/style/index.scss";
-
+// @ import "../node_modules/taro-ui/dist/style/index.scss";
 
 .page {
+  color: $color-text-base;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -12,4 +13,42 @@
 
 view {
   box-sizing: border-box;
+}
+
+
+.error{
+  color:red;
+}
+
+
+.at-form{
+  padding: 0 $spacing-h-xl $spacing-h-xl $spacing-h-xl;
+}
+
+.at-button{
+  background-color: $at-button-bg;
+  color: $color-text-base-inverse;
+}
+
+.fsr-list-item{
+  @include display-flex();
+  @include align-items(center);
+  width: 100%;
+
+  &__label,&__value{
+    padding: $spacing-v-lg 0;
+    line-height: $line-height-zh;
+  }
+  &__label{
+    @include flex(3);
+    text-align: left;
+    margin: 0 $spacing-v-sm 0 0;
+  }
+
+  &__value{
+    @include flex(9);
+    text-align: right;
+
+  }
+
 }
