feat(all): 新增学生档案列表功能，将新建学生档案改进为与编辑共用

--- a/src/app.scss
+++ b/src/app.scss
@@ -20,14 +20,20 @@ view {
   color:red;
 }
 
-
-.at-form{
-  padding: 0 $spacing-h-xl $spacing-h-xl $spacing-h-xl;
+.at-toast{
+  // z-index: 9999;
+  .toast-body{
+    top: 35%;
+  }
 }
 
-.at-button{
+button, .at-button{
   background-color: $at-button-bg;
   color: $color-text-base-inverse;
+
+  &.share-bt{
+    background-color: $color-text-secondary;
+  }
 }
 
 .fsr-list-item{
