--- a/src/components/fsr-grid/index.scss
+++ b/src/components/fsr-grid/index.scss
@@ -10,7 +10,7 @@
   .at-col{
     position: relative;
     text-align: center;
-    border-right: 1px $color-grey-3 solid;
+    border-right: 1PX $color-grey-3 solid;
     padding: $spacing-h-sm 0 $spacing-h-xl 0;
 
     &:last-child {
