--- a/src/pages/my/index.scss
+++ b/src/pages/my/index.scss
@@ -15,7 +15,7 @@
       font-size: $font-size-xl;
       line-height: 2;
       background: none;
-      border: 1px white solid;
+      border: 1PX white solid;
       color: white;
       opacity: 0.8;
     }
